@startuml
class Options{
convergence_threshold
nroots
max_iterations
}
package "Options common to a particular type of solver"{
class IOptimizeOptions
class INonLinearEquationsOptions
class LinearEquationsOptions
class LinearEigensystemOptions
}

package "Implementation options"{
class LinearEquationsOptions{
max_size_Q_space
...
}
class LinearEigensystemOptions{
max_size_Q_space
...
}
class DIISOptions
class BFGSOptions
class ConjugateGradientOptions
}

hide empty methods
hide empty fields
Options <|-- LinearEigensystemOptions
Options <|-- LinearEquationsOptions
Options <|-- INonLinearEquationsOptions
Options <|-- IOptimizeOptions
LinearEigensystemOptions ^-- LinearEigensystemOptions
LinearEquationsOptions ^-- LinearEquationsOptions
INonLinearEquationsOptions ^-- DIISOptions
IOptimizeOptions ^-- BFGSOptions
IOptimizeOptions ^-- ConjugateGradientOptions
@enduml